--- a/full_stack/sass/scss/mystyle.scss
+++ b/full_stack/sass/scss/mystyle.scss
@@ -26,4 +26,14 @@ nav {
 @import "partial";
 
 
+//mixin
+@mixin firefox-message($selector) {
+  body.firefox #{$selector}:before {
+  content: "Hi, Firefox users!";
+}
+}
+
+@include firefox-message(".header")
+
+
 
