--- a/full_stack/sass/css/mystyle.css
+++ b/full_stack/sass/css/mystyle.css
@@ -16,4 +16,7 @@ ul {
   margin: 0;
   padding: 0; }
 
+body.firefox .header:before {
+  content: "Hi, Firefox users!"; }
+
 /*# sourceMappingURL=mystyle.css.map */
